#10993 프로세스 디자이너 - 엘리먼트 팔레트 디자인 부분 적용

--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -3925,8 +3925,8 @@ label {
 .file-uploader-edit .dropzone .dz-preview.dz-error .dz-remove .icon-delete {
   width: 1.125rem;
   height: 3rem;
-  -webkit-mask-image: url("../media/icons/icon_close.svg");
-  mask-image: url("../media/icons/icon_close.svg");
+  -webkit-mask-image: url("../media/icons/icon_clear.svg");
+  mask-image: url("../media/icons/icon_clear.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
@@ -4127,8 +4127,8 @@ label {
   cursor: pointer;
   width: 0.875rem;
   height: 0.875rem;
-  -webkit-mask-image: url("../media/icons/icon_close.svg");
-  mask-image: url("../media/icons/icon_close.svg");
+  -webkit-mask-image: url("../media/icons/icon_clear.svg");
+  mask-image: url("../media/icons/icon_clear.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
