--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -4316,8 +4316,8 @@ table[id=documentDisplay] td {
 .file-uploader-edit .dropzone .dz-preview.dz-error .dz-remove .icon-delete {
   width: 1.125rem;
   height: 3rem;
-  -webkit-mask-image: url("../media/icons/icon_close.svg");
-  mask-image: url("../media/icons/icon_close.svg");
+  -webkit-mask-image: url("../media/icons/icon_clear.svg");
+  mask-image: url("../media/icons/icon_clear.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
@@ -4587,7 +4587,7 @@ table[id=documentDisplay] td {
   display: block;
   width: 1.125rem;
   height: 1.125rem;
-  background-image: url("../media/icons/icon_close.svg");
+  background-image: url("../media/icons/icon_clear.svg");
   background-size: 0.875rem;
   background-repeat: no-repeat;
   background-position-x: center;
@@ -4714,8 +4714,8 @@ table[id=documentDisplay] td {
   cursor: pointer;
   width: 0.875rem;
   height: 0.875rem;
-  -webkit-mask-image: url("../media/icons/icon_close.svg");
-  mask-image: url("../media/icons/icon_close.svg");
+  -webkit-mask-image: url("../media/icons/icon_clear.svg");
+  mask-image: url("../media/icons/icon_clear.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
@@ -6221,8 +6221,8 @@ body.modal-active {
   margin-left: auto;
   width: 0.875rem;
   height: 0.875rem;
-  -webkit-mask-image: url("../media/icons/icon_close.svg");
-  mask-image: url("../media/icons/icon_close.svg");
+  -webkit-mask-image: url("../media/icons/icon_clear.svg");
+  mask-image: url("../media/icons/icon_clear.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
@@ -6385,8 +6385,8 @@ body.modal-active {
   padding: 0;
   width: 0.875rem;
   height: 0.875rem;
-  -webkit-mask-image: url("../media/icons/icon_close.svg");
-  mask-image: url("../media/icons/icon_close.svg");
+  -webkit-mask-image: url("../media/icons/icon_clear.svg");
+  mask-image: url("../media/icons/icon_clear.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
@@ -7265,5 +7265,3 @@ body.modal-active {
 .tags-look .tagify__dropdown__item--active {
   color: #0088E6;
 }
-
-/*# sourceMappingURL=itsm.css.map */
