--- a/src/main/resources/public/template/process/processDesignerEdit.html
+++ b/src/main/resources/public/template/process/processDesignerEdit.html
@@ -78,37 +78,37 @@
             <span class="ml-auto" id="process-name"></span>
         </div>
         <div class="z-process-element-palette">
-            <button type="button" class="rectangle-menu shape event">
-                <span class="icon icon-event"></span>
-                <label class="icon-text" th:text="#{process.designer.element.event}"></label>
+            <button type="button" class="z-element-icon shape event">
+                <span class="z-icon i-event"></span>
+                <label class="z-element-icon-text" th:text="#{process.designer.element.event}"></label>
             </button>
-            <button type="button" class="rectangle-menu shape task">
-                <span class="icon icon-task"></span>
-                <label class="icon-text" th:text="#{process.designer.element.task}"></label>
+            <button type="button" class="z-element-icon shape task">
+                <span class="z-icon i-task"></span>
+                <label class="z-element-icon-text" th:text="#{process.designer.element.task}"></label>
             </button>
-            <button type="button" class="rectangle-menu shape subprocess">
-                <span class="icon icon-subprocess"></span>
-                <label class="icon-text" th:text="#{process.designer.element.subprocess}"></label>
+            <button type="button" class="z-element-icon shape subprocess">
+                <span class="z-icon i-subprocess"></span>
+                <label class="z-element-icon-text" th:text="#{process.designer.element.subprocess}"></label>
             </button>
-            <button type="button" class="rectangle-menu shape gateway">
-                <span class="icon icon-gateway"></span>
-                <label class="icon-text" th:text="#{process.designer.element.gateway}"></label>
+            <button type="button" class="z-element-icon shape gateway">
+                <span class="z-icon i-gateway"></span>
+                <label class="z-element-icon-text" th:text="#{process.designer.element.gateway}"></label>
             </button>
-            <button type="button" class="rectangle-menu shape group">
-                <span class="icon icon-group"></span>
-                <label class="icon-text" th:text="#{process.designer.element.group}"></label>
+            <button type="button" class="z-element-icon shape group">
+                <span class="z-icon i-group"></span>
+                <label class="z-element-icon-text" th:text="#{process.designer.element.group}"></label>
             </button>
-            <button type="button" class="rectangle-menu shape annotation">
-                <span class="icon icon-annotation"></span>
-                <label class="icon-text" th:text="#{process.designer.element.annotation}"></label>
+            <button type="button" class="z-element-icon shape annotation">
+                <span class="z-icon i-annotation"></span>
+                <label class="z-element-icon-text" th:text="#{process.designer.element.annotation}"></label>
             </button>
-            <button type="button" class="rectangle-menu connector">
-                <span class="icon icon-connector"></span>
-                <label class="icon-text" th:text="#{process.designer.element.connector}"></label>
+            <button type="button" class="z-element-icon connector">
+                <span class="z-icon i-connector"></span>
+                <label class="z-element-icon-text" th:text="#{process.designer.element.connector}"></label>
             </button>
-            <button type="button" class="rectangle-menu move-icon" id="icon-move-drawingboard">
-                <span class="icon icon-background"></span>
-                <label class="icon-text" th:text="#{process.designer.element.background}"></label>
+            <button type="button" class="z-element-icon move-icon" id="icon-move-drawingboard">
+                <span class="z-icon i-background"></span>
+                <label class="z-element-icon-text" th:text="#{process.designer.element.background}"></label>
             </button>
         </div>
         <div class="z-process-main">
