--- a/src/main/resources/public/scss/process/_variables.scss
+++ b/src/main/resources/public/scss/process/_variables.scss
@@ -1,17 +1,45 @@
 //////////////////////////// layout ////////////////////////////
 // header
-$layout-header-height:                       3.125rem; // 50px
-$layout-header-font-size:                    $font-size-s;
-$layout-header-font-color:                   $white;
-$layout-header-font-weight:                  $font-weight-medium;
-$layout-header-bg-color:                     $blue;
+$layout-header-height:                             3.125rem; // 50px
+$layout-header-font-size:                          $font-size-s;
+$layout-header-font-color:                         $white;
+$layout-header-font-weight:                        $font-weight-medium;
+$layout-header-bg-color:                           $blue;
 
 // element palette
-$layout-element-palette-width:               6.25rem; // 100px
-$layout-element-palette-bg-color:            $white;
-$layout-element-palette-border:              0.0625rem solid map-get($grays, "line"); // 1px
-$layout-element-palette-box-shadow:          0.0625rem 0 0.4375rem 0 hexToRGBA(map-get($grays, 'pressed'), 0.15);// 1px 0px 7px 0px $pressed-gray, 불투명도 15%;
-$icon-rectangle-menu-color:                  map-get($grays, "pressed");
+$layout-element-palette-width:                     6.25rem; // 100px
+$layout-element-palette-bg-color:                  $white;
+$layout-element-palette-border-color:              $gray300;
+$layout-element-palette-border-width:              0.0625rem; // 1px
+$layout-element-palette-box-shadow-color:          $blue600;
+
+// 엘리먼트 아이콘
+$element-icon-width:                               5.625rem; // 90px
+$element-icon-height:                              4.375rem; // 70px
+$element-icon-font-family:                         $font-family-s;
+$element-icon-font-size:                           $font-size-xs;
+$element-icon-font-weight:                         $font-weight-medium;
+$element-icon-border-radius:                       0.125rem; // 2px
+$element-icon-border-width:                        0.0625rem; // 1px
+
+$element-icon: (
+  'default': ('font': $gray600, 'icon': $gray500, 'background': $white, 'border': $gray300),
+  'hover': ('font' : $gray600, 'icon': $gray600,  'background': $blue100, 'border': $gray300),
+  'focus': ('font': $gray600, 'icon': $gray500, 'background': $white, 'border': $blue600, 'shadow': 0 0 0.125rem $blue600),
+  'active': ('font': $blue700, 'icon': $blue700, 'background': $blue100, 'border': $blue400),
+  'drag': ('font': $gray800, 'icon': $blue500, 'background': $white, 'border': $gray300, 'shadow': 0 0 0.125rem $gray300),
+  'placeholder': ('font': $gray400, 'icon': $gray400, 'background': $neutral200, 'border': $gray300)
+);
+// 엘리먼트 아이콘 - 연결선, 배경이동 (토글 버튼)
+$element-icon-toggle: (
+  'default': ('font': $gray800, 'background': $white, 'border': $gray300),
+  'hover': ('font' : $gray800, 'background': $blue100, 'border': $gray300),
+  'focus': ('font': $gray800, 'background': $white, 'border': $blue600, 'shadow': 0 0 0.125rem $blue600),
+  'active': ('font': $blue700, 'background': $blue200, 'border': $blue400),
+  'selected': ('font': $blue500, 'background': $white, 'border': $blue500),
+  'disabled': ('font': $gray400, 'background': $neutral200, 'border': $gray300)
+);
+
 
 // main > drawing-board
 $drawing-board-bg-color:                     map-get($grays, "light"); // 모눈종이 바탕색
