--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -950,7 +950,6 @@ input, button, select, optgroup, textarea {
   background-color: #FFFFFF;
   border: 0.0625rem solid #CFD5D9;
   border-top-color: transparent;
-  box-shadow: none;
   cursor: move;
   outline: none;
 }
@@ -1144,48 +1143,53 @@ input, button, select, optgroup, textarea {
 .z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon:hover .z-icon {
   background: #63686C;
 }
+.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon:hover .z-component-name {
+  color: #63686C;
+}
 .z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon:focus {
+  background-color: #FFFFFF;
   border-color: #2578CE;
   z-index: 25;
-  -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
-  -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
-  box-shadow: 0 0 0.125rem 0 #2578CE;
+  box-shadow: 0 0 0.125rem #2578CE;
 }
-.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.z-component-icon-drag-active {
+.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon:focus .z-icon {
+  background: #8B9094;
+}
+.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon:focus .z-component-name {
+  color: #63686C;
+}
+.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.active {
   border-color: #64BBF6;
   background-color: #E3F5FC;
   z-index: 25;
-  box-shadow: none;
 }
-.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.z-component-icon-drag-active .z-icon {
+.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.active .z-icon {
   background: #1959AC;
 }
-.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.z-component-icon-drag-active .z-component-name {
+.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.active .z-component-name {
   font-weight: 700;
   color: #1959AC;
 }
-.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.z-component-icon-drag-on {
+.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.drag {
   border-color: #CFD5D9;
   background-color: #FFFFFF;
-  -webkit-box-shadow: 0 0 0.125rem 0 #CFD5D9;
-  -moz-box-shadow: 0 0 0.125rem 0 #CFD5D9;
-  box-shadow: 0 0 0.125rem 0 #CFD5D9;
+  box-shadow: 0 0 0.125rem #CFD5D9;
 }
-.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.z-component-icon-drag-on .z-icon {
+.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.drag .z-icon {
   background: #339AF0;
 }
-.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.z-component-icon-drag-on .z-component-name {
+.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.drag .z-component-name {
   font-weight: 700;
   color: #222529;
 }
-.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.z-component-icon-drag-placeholder {
+.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.placeholder {
   border-color: #CFD5D9;
   background-color: #EEEEEE;
 }
-.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.z-component-icon-drag-placeholder .z-icon {
+.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.placeholder .z-icon {
   background: #ABB0B5;
 }
-.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.z-component-icon-drag-placeholder .z-component-name {
+.z-component-accordion-box .z-component-accordion .z-accordion-content .z-component-icon-box .z-component-icon.placeholder .z-component-name {
   font-weight: 500;
   color: #ABB0B5;
 }
