--- a/src/main/resources/public/scss/theme/default/_top.scss
+++ b/src/main/resources/public/scss/theme/default/_top.scss
@@ -1,27 +1,27 @@
 // Top 메뉴
-.z-top {
+.#{$common-prefix}top {
     background-color: $top-menu-bg-color;
     height: 3.5rem; // 56px
-    .z-icon-notification {
+    .#{$common-prefix}icon-notification {
         height: 1.5rem; // 24px
-        &.z-active {
-            .z-notification-round {  fill: $top-menu-notification-active-color; }
+        &.active {
+            .notification-round {  fill: $top-menu-notification-active-color; }
         }
         &:hover { cursor: pointer; }
     }
-    .z-divide {
+    .#{$common-prefix}divide {
         padding: 0 0.75rem 0 1.25rem; // 0 12px 0 20px
         height: 1.25rem; // 20px
         color: $top-menu-divide-color;
     }
-    .z-user-info {
+    .#{$common-prefix}user-info {
         height: 2.875rem; // 46px
         margin: 0.313rem 0.5rem 0.313rem 0; // 5px 8px 5px 0
         padding: 0 0.5rem 0 0.5rem; // 0 8px 0 8px
         background-color: $top-menu-bg-color;
         @include border(0.0625rem, solid, $top-menu-bg-color, all); // 1px
         @include borderRadius(0.25rem); // 4px
-        .z-user-name {
+        .#{$common-prefix}user-name {
             display: inline-block;
             min-width: 2.75rem; // 44px
             max-width: 12.5rem; // 200px
@@ -31,21 +31,24 @@
             font-weight: $font-weight-medium;
             padding: 0 0 0 0.5rem; // 0 0 0 8px
         }
-        .z-user-profile {
+        .#{$common-prefix}user-profile {
             display: inline-block;
             width: 1.875rem; // 30px
             height: 1.875rem; // 30px
             @include borderRadius(50%);
             vertical-align: middle;
         }
-        .i-menu-arrow {
-            margin-left: auto;
-            float: right;
-            &-top {
-                @include maskImage($icon-menu-arrow-top, 1.5rem, 1.5rem, no-repeat, center, null, $icon-gnb-color); // 12px 20px
+        .#{$common-prefix}icon {
+            &.i-arrow-right {
+                @include rotate(-90);
             }
-            &-bottom {
-                @include maskImage($icon-menu-arrow-bottom, 1.5rem, 1.5rem, no-repeat, center, null, $icon-gnb-color); // 12px 20px
+        }
+        .#{$common-prefix}icon {
+            &.i-arrow-right {
+                margin-left: auto;
+                float: right;
+                background-color: $icon-gnb-color;
+                @include rotate(90);
             }
         }
         &:hover {
@@ -61,19 +64,22 @@
         &:active {
             background-color: $top-menu-user-bg-active;
             border-color: $top-menu-user-border-active;
-            .i-menu-arrow-top, .i-menu-arrow-bottom {
+            .i-arrow-right {
                 background-color: $top-menu-user-icon-active;
             }
         }
-        &.z-active {
+        &.active {
             background-color: $top-menu-user-selected-bg-color;
             border-color: $top-menu-user-selected-border-color;
             + .z-dropdown-content {
                 visibility: visible;
             }
+            .i-arrow-right {
+                @include rotate(-90);
+            }
         }
     }
-    .z-dropdown {
+    .#{$common-prefix}dropdown {
         &-content {
             visibility: hidden;
             position: absolute;
